Add prefix to push/merge commit message id
Because push mail and merge commit mail have same message id.

--- a/test/fixture/test_nested_merges.5
+++ b/test/fixture/test_nested_merges.5
@@ -2,7 +2,7 @@ X-Git-Author: User Name
 X-Git-Revision: b68900ee1e76da760f37d84a74828af4ebf4e2d4
 X-Git-Repository: XXX
 X-Git-Commit-Id: b68900ee1e76da760f37d84a74828af4ebf4e2d4
-Message-ID: <b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
+Message-ID: <merge.f4815ccd34d8ea22b1a8319e62a31f998ea94087.b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
 X-Mailer: GitCommitMailer 1.0.0; https://github.com/clear-code/git-commit-mailer
 MIME-Version: 1.0
 Content-Type: text/plain; charset=utf-8
