--- a/test/fixture/test_nested_merges.4
+++ b/test/fixture/test_nested_merges.4
@@ -2,7 +2,7 @@ X-Git-Author: User Name
 X-Git-Revision: 6e9d06f2283b074822cf322dad067609dc895c27
 X-Git-Repository: XXX
 X-Git-Commit-Id: 6e9d06f2283b074822cf322dad067609dc895c27
-Message-ID: <6e9d06f2283b074822cf322dad067609dc895c27@git-utils.example.com>
+Message-ID: <merge.92735c9e68940f8bbd9de90d4f7e3f374e28c357.6e9d06f2283b074822cf322dad067609dc895c27@git-utils.example.com>
 References: <b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
 In-Reply-To: <b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
 X-Mailer: GitCommitMailer 1.0.0; https://github.com/clear-code/git-commit-mailer
