--- a/test/fixture/test_nested_merges.1
+++ b/test/fixture/test_nested_merges.1
@@ -3,8 +3,8 @@ X-Git-Revision: 92735c9e68940f8bbd9de90d4f7e3f374e28c357
 X-Git-Repository: XXX
 X-Git-Commit-Id: 92735c9e68940f8bbd9de90d4f7e3f374e28c357
 Message-ID: <92735c9e68940f8bbd9de90d4f7e3f374e28c357@git-utils.example.com>
-References: <b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
-In-Reply-To: <b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
+References: <merge.f4815ccd34d8ea22b1a8319e62a31f998ea94087.b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
+In-Reply-To: <merge.f4815ccd34d8ea22b1a8319e62a31f998ea94087.b68900ee1e76da760f37d84a74828af4ebf4e2d4@git-utils.example.com>
 X-Mailer: GitCommitMailer 1.0.0; https://github.com/clear-code/git-commit-mailer
 MIME-Version: 1.0
 Content-Type: text/plain; charset=utf-8
