--- a/test/fixture/test_push_with_merge.1
+++ b/test/fixture/test_push_with_merge.1
@@ -3,8 +3,8 @@ X-Git-Revision: 4c477387f27238d62e911998f266a52f8b26a6ed
 X-Git-Repository: XXX
 X-Git-Commit-Id: 4c477387f27238d62e911998f266a52f8b26a6ed
 Message-ID: <4c477387f27238d62e911998f266a52f8b26a6ed@git-utils.example.com>
-References: <1f650fb7abc05767a75fb13b1cd91434e21f1b2a@git-utils.example.com>
-In-Reply-To: <1f650fb7abc05767a75fb13b1cd91434e21f1b2a@git-utils.example.com>
+References: <merge.ad1555c9179b911e3228c0cd466c5661abda4b6b.1f650fb7abc05767a75fb13b1cd91434e21f1b2a@git-utils.example.com>
+In-Reply-To: <merge.ad1555c9179b911e3228c0cd466c5661abda4b6b.1f650fb7abc05767a75fb13b1cd91434e21f1b2a@git-utils.example.com>
 X-Mailer: GitCommitMailer 1.0.0; https://github.com/clear-code/git-commit-mailer
 MIME-Version: 1.0
 Content-Type: text/plain; charset=utf-8
